codepkg/objects/Care_Label_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>CA__c</fullName>
        <label>CA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Instruction_Detail__c</fullName>
        <label>Care Instruction Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Care_Instruction_Group__c</fullName>
        <label>Care Instruction Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ex_Care_Instructions__c</fullName>
        <label>Ex Care Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labelling_Code__c</fullName>
        <label>Labelling Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language1__c</fullName>
        <label>Language1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language2__c</fullName>
        <label>Language2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language3__c</fullName>
        <label>Language3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainettiOrder__c</fullName>
        <formula>SalesOrderLineItems__r.Sales_Order__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MainettiOrder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaging_Code__c</fullName>
        <label>Packaging Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RN_Number__c</fullName>
        <label>RN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrderLineItems__c</fullName>
        <label>Mainetti  Order Line Item</label>
        <referenceTo>Sales_Order_Line_Items__c</referenceTo>
        <relationshipLabel>Care Label Order Lines</relationshipLabel>
        <relationshipName>Care_Label_Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Season_Month__c</fullName>
        <label>Season Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Season_Year__c</fullName>
        <label>Season Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Style_Number__c</fullName>
        <label>Style Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Number__c</fullName>
        <label>Supplier Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>careInstructions__c</fullName>
        <label>Care Instructions</label>
        <type>TextArea</type>
    </fields>
    <label>Care Label Order Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MainettiOrder__c</columns>
        <columns>SalesOrderLineItems__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Item_Number__c</columns>
        <columns>careInstructions__c</columns>
        <columns>Component__c</columns>
        <columns>Care_Instruction_Detail__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CLLI-{0000}</displayFormat>
        <label>Care Label Order Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Label Order Lines</pluralLabel>
    <recordTypes>
        <fullName>Care_Instructions</fullName>
        <active>true</active>
        <label>Care Instructions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ex_Care_Instructions</fullName>
        <active>true</active>
        <label>Ex Care Instructions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fabric_Component</fullName>
        <active>true</active>
        <label>Fabric Component</label>
    </recordTypes>
    <recordTypes>
        <fullName>Free_Text</fullName>
        <active>true</active>
        <label>Free Text</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>